--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --ext .js --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build:icons": "node scripts/build-icons.js"
   },
   "dependencies": {
     "bpmn-font": "^0.12.1",
@@ -45,6 +46,9 @@
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.4",
-    "prettier": "^3.6.2"
+    "fs-extra": "^11.3.3",
+    "glob": "^13.0.1",
+    "prettier": "^3.6.2",
+    "svgo": "^4.0.0"
   }
 }
